# snipster

./: :memory  README.md  main.py  pyproject.toml  snipster.db
src/snipster/: __main__.py  models.py
tests/: test_model.py
